colorer the divs heirachically

--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Smashing website Tear down</title>
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo"></div>
+        <div class="links">
+            <div class="link"></div>
+            <div class="link"></div>
+            <div class="link"></div>
+            <div class="link"></div>
+            <div class="link"></div>
+        </div>
+        <div class="search"></div>
+    </header>
     <section>
         <div></div>
         <div></div>
     </section>
     <div class="text">
-      <p></p>
-      <span></span>
+      <p>Hey There! Look Here</p>
+      <span>First!</span>
     </div>
 </body>
 </html>
