--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <div class="links">
             <div class="link"></div>
             <div class="link"></div>
-            <div class="link"></div>
+            <div class="link">4</div>
             <div class="link"></div>
             <div class="link"></div>
         </div>
         <div class="search"></div>
     </header>
     <section>
-        <div></div>
-        <div></div>
+        <div>3</div>
+        <div>2</div>
     </section>
     <div class="text">
-      <p>Hey There! Look Here</p>
+      <p>1</p>
       <span>First!</span>
     </div>
 </body>
